...
	}));

	const onContentSizeChange = () => flatlist?.current?.scrollToEnd({ animated: true });

	return (
		<View style={{ backgroundColor: themes[theme].backgroundColor }}>
			<SearchBox onChangeText={(text: string) => onChangeText(text)} testID='select-users-view-search' />
			{users.length === 0 ? null : (
				<View>
					<Text style={[styles.selectedText, { color: themes[theme].auxiliaryTintColor }]}>
						{I18n.t('N_Selected_members', { n: users.length })}
					</Text>
					<FlatList
...
