...
							icon={'discussions'}
							testID={'new-message-view-create-discussion'}
						/>
					) : null}
				</View>
			</View>
			<SearchBox onChangeText={(text: string) => onChangeText(text)} testID='new-message-view-search' />
		</>
	);
};

export default HeaderNewMessage;

