...
			headerRight: () =>
				(!maxUsers || showButton || (isGroupChat() && users.length > 1)) && (
					<HeaderButton.Container>
						<HeaderButton.Item
							title={users.length > 0 ? buttonTextHeader : I18n.t('Skip')}
							onPress={nextActionHeader}
							testID='selected-users-view-submit'
						/>
					</HeaderButton.Container>
				)
		};
		navigation.setOptions(options);
	}, [navigation, users.length, maxUsers]);
...
